# ChatTool

./: CMakeLists.txt  ChatTool.sln  README.md
ChatTool/: CMakeLists.txt  ChatTool.vcxproj  ChatTool.vcxproj.filters  client.cpp  client.ini  common_socket.h  lang.cpp  lang.h
ChatTool_Server/: CMakeLists.txt  ChatTool_Server.vcxproj  ChatTool_Server.vcxproj.filters  common_socket.h  config_parser.h  server.cpp  server.ini
